force-app/main/default/objects/Account/fields/A_B_Test_Marker_Account__c.field-meta.xml
<CustomField>
    <fullName>A_B_Test_Marker_Account__c</fullName>
    <description>Temporary helper field for the implementation and testing of the Sentiment Summary</description>
    <label>Temp Helper Sentiment Summary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A_B_Testing</valueSetName>
    </valueSet>
</CustomField>