force-app/main/default/objects/Account/fields/Account_Archetype__c.field-meta.xml
<CustomField>
    <fullName>Account_Archetype__c</fullName>
    <description>RO-2844</description>
    <inlineHelpText>Klassifiziert den Account nach Archetyp. Enterprise Account: grosse Unternehmenskunden. Mid-Market Account (Konzernstruktur): mittelgrosse Accounts innerhalb einer Konzernstruktur. Mid-Market Account (Einzelgesellschaft): mittelgrosse, eigenstaendige Accounts. SMB Account: kleine und mittlere Unternehmen. HeySquads Account: Accounts, die ueber HeySquads betreut werden. Nur durch Admins bearbeitbar.</inlineHelpText>
    <label>Account Archetype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Account</fullName>
            </value>
            <value>
                <fullName>Mid-Market Account (Konzernstruktur)</fullName>
            </value>
            <value>
                <fullName>Mid-Market Account (Einzelgesellschaft)</fullName>
            </value>
            <value>
                <fullName>SMB Account</fullName>
            </value>
            <value>
                <fullName>HeySquads Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>