force-app/main/default/objects/Account/fields/Account_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Country_Code__c</fullName>
    <label>Account Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>