force-app/main/default/objects/Account/fields/Account_Disqualified_By__c.field-meta.xml
<CustomField>
    <fullName>Account_Disqualified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Disqualified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_Disqualified</relationshipName>
    <type>Lookup</type>
</CustomField>