force-app/main/default/objects/Account/fields/Account_Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Hierarchy_Level__c</fullName>
    <description>RO-2157</description>
    <formula>IF( ISBLANK(Parent.Name) , 1,
IF( ISBLANK(Parent.Parent.Name), 2,
IF( ISBLANK(Parent.Parent.Parent.Name), 3,
IF( ISBLANK(Parent.Parent.Parent.Parent.Name), 4,
IF(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name) , 5,
IF(ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Name) , 6,
NULL )
)
))))</formula>
    <inlineHelpText>Zeigt die Ebene des Accounts in der Hierarchie an. 1 ist immer der ultimative Parent, während 2, 3, 4, … die Eltern, Kinder, Enkelkinder usw. sind. Für Accounts auf Ebene 7 oder darunter ist der Wert leer.</inlineHelpText>
    <label>Account Hierarchy Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>