force-app/main/default/objects/Account/fields/Account_ID_18_digit__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18_digit__c</fullName>
    <description>Case Safe 18 Digit Record ID to be used in Reports</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID (18)</label>
    <type>Text</type>
</CustomField>