force-app/main/default/objects/Account/fields/Account_Insert_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Insert_Source__c</fullName>
    <description>This field is populated for mass inserts and defines the source of the account information. This is used for tracking and cleanup.</description>
    <inlineHelpText>This field is populated for mass inserts and defines the source of the account information. This is used for tracking and cleanup.</inlineHelpText>
    <label>Account Insert Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>e-Commerce</fullName>
            </value>
            <value>
                <fullName>WZW</fullName>
            </value>
            <value>
                <fullName>CreFo</fullName>
            </value>
            <value>
                <fullName>Index Anzeigendaten</fullName>
            </value>
            <value>
                <fullName>Dealfront</fullName>
            </value>
            <value>
                <fullName>Index</fullName>
                <isActive>false</isActive>
                <label>Index</label>
            </value>
            <value>
                <fullName>WZW_0Employee_sub50_02_2021</fullName>
                <isActive>false</isActive>
                <label>WZW_0Employee_sub50_02_2021</label>
            </value>
            <value>
                <fullName>WZW_1-50Employee_02_2021</fullName>
                <isActive>false</isActive>
                <label>WZW_1-50Employee_02_2021</label>
            </value>
            <value>
                <fullName>WZW_AT_02_2022</fullName>
                <isActive>false</isActive>
                <label>WZW_AT_02_2022</label>
            </value>
            <value>
                <fullName>WZW_Agency_12_2021</fullName>
                <isActive>false</isActive>
                <label>WZW_Agency_12_2021</label>
            </value>
            <value>
                <fullName>WZW_CbyC_1_07_2021</fullName>
                <isActive>false</isActive>
                <label>WZW_CbyC_1_07_2021</label>
            </value>
            <value>
                <fullName>WZW_CbyC_2_07_2021</fullName>
                <isActive>false</isActive>
                <label>WZW_CbyC_2_07_2021</label>
            </value>
            <value>
                <fullName>e-Commerce 02_2021</fullName>
                <isActive>false</isActive>
                <label>e-Commerce 02_2021</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>