force-app/main/default/objects/Account/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Reference of Account Owner for restriction reason</description>
    <formula>Owner.Full_Name__c</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>