force-app/main/default/objects/Account/fields/Account_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Product_Type__c</fullName>
    <description>RO - 1547</description>
    <label>Legacy_Account Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Type</valueSetName>
    </valueSet>
</CustomField>