force-app/main/default/objects/Account/fields/Account_Run_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Account_Run_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-2433</description>
    <inlineHelpText>Marker-Feld, um Accounts vom Account Run ein- oder auszuschließen.</inlineHelpText>
    <label>Account Run Relevant</label>
    <type>Checkbox</type>
</CustomField>