force-app/main/default/objects/Account/fields/Account_Run_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Run_Status_Notes__c</fullName>
    <description>RO-2433</description>
    <inlineHelpText>Platz für wichtige Informationen, Beobachtungen oder Erinnerungen, die für deine Verkaufsstrategie in diesem Quartal hilfreich sein könnten.</inlineHelpText>
    <label>Account Run Status &amp; Notes</label>
    <type>TextArea</type>
</CustomField>