force-app/main/default/objects/Account/fields/Account_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Street__c</fullName>
    <label>Account Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>