force-app/main/default/objects/Account/fields/Account_ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_ZIP_Postal_Code__c</fullName>
    <label>Account ZIP/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>