force-app/main/default/objects/Account/fields/Active_Account_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Active_Account_Documentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO-2434</description>
    <inlineHelpText>Active Account Documentation</inlineHelpText>
    <label>Active Account Documentation</label>
    <referenceTo>Customer_360__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>