force-app/main/default/objects/Account/fields/Active_Agency_Customer_Budget__c.field-meta.xml
<CustomField>
    <fullName>Active_Agency_Customer_Budget__c</fullName>
    <description>Shows the sum of the Budget of Agency Customers / RO-202</description>
    <label>Legacy Active Agency Customer Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>