force-app/main/default/objects/Account/fields/Active_Countries__c.field-meta.xml
<CustomField>
    <fullName>Active_Countries__c</fullName>
    <description>RO - 1631</description>
    <label>Legacy Active Countries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>AT &amp; DE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>