force-app/main/default/objects/Account/fields/Active_Hey_Paket_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Hey_Paket_End_Date__c</fullName>
    <description>Shows the HeyPaket End Date of the Opportunity linked under Active HeyPaket. 
RO-1432</description>
    <formula>Active_HeyPaket__r.HeyPaket_End_Date__c</formula>
    <inlineHelpText>Zeigt das HeyPaket Enddatum der Opportunity, die unter Aktivem HeyPaket verknüpft ist.</inlineHelpText>
    <label>Active HeyPaket End Date</label>
    <type>Date</type>
</CustomField>