force-app/main/default/objects/Account/fields/Active_HeyPaket__c.field-meta.xml
<CustomField>
    <fullName>Active_HeyPaket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Active HeyPaket Opportunity
RO-1432</description>
    <inlineHelpText>Zeigt die aktive HeyPaket Opportunity</inlineHelpText>
    <label>Active HeyPaket</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts (Active HeyPaket)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>