force-app/main/default/objects/Account/fields/Active_HeyPaket_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_HeyPaket_Start_Date__c</fullName>
    <description>Shows the HeyPaket Start Date of the Opportunity linked under Active HeyPaket. 
RO-1432</description>
    <formula>Active_HeyPaket__r.HeyPaket_Start_Date__c</formula>
    <inlineHelpText>Zeigt das HeyPaket Startdatum der Opportunity, die unter Aktivem HeyPaket verknüpft ist.</inlineHelpText>
    <label>Active HeyPaket Start Date</label>
    <type>Date</type>
</CustomField>