force-app/main/default/objects/Account/fields/Active_HeyPaket_Type__c.field-meta.xml
<CustomField>
    <fullName>Active_HeyPaket_Type__c</fullName>
    <description>Shows the HeyPaket Type of the Opportunity linked under Active HeyPaket.
RO-1432</description>
    <formula>TEXT( Active_HeyPaket__r.HeyPaket_Type__c )</formula>
    <inlineHelpText>Zeigt den HeyPaket-Typ der Opportunity, die unter Aktivem HeyPaket verknüpft ist.</inlineHelpText>
    <label>Active HeyPaket Type</label>
    <type>Text</type>
</CustomField>