force-app/main/default/objects/Account/fields/Actively_Hiring_Score__c.field-meta.xml
<CustomField>
    <fullName>Actively_Hiring_Score__c</fullName>
    <description>RO-2536</description>
    <inlineHelpText>Dieser Score bewertet die aktuelle Einstellungsaktivität eines Accounts basierend auf Stellenausschreibungen. Je höher der Score, desto aktiver stellt das Unternehmen derzeit ein. Die Berechnung basiert auf Veröffentlichungsdatum, Anzahl aktiver Jobs und Job-Plattform.</inlineHelpText>
    <label>Legacy Actively Hiring Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>