force-app/main/default/objects/Account/fields/Additional_Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Billing_Information__c</fullName>
    <label>Additional Billing Information</label>
    <type>TextArea</type>
</CustomField>