force-app/main/default/objects/Account/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <description>Agency that we found in our agency job dataset.</description>
    <inlineHelpText>Agency that we found in our agency job dataset.</inlineHelpText>
    <label>Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>