force-app/main/default/objects/Account/fields/agency_data_job_feed_update__c.field-meta.xml
<CustomField>
    <fullName>agency_data_job_feed_update__c</fullName>
    <description>Date of when we retrieved the dataset (ask MJ/RevInt/RevTech for more details)</description>
    <label>Legacy Job feed update - Agency</label>
    <type>Date</type>
</CustomField>