force-app/main/default/objects/Account/fields/agency_data_jobs_live__c.field-meta.xml
<CustomField>
    <fullName>agency_data_jobs_live__c</fullName>
    <description>This field contains the number of jobs we found for this account in the dataset we use for enhancing our accounts with agency information.</description>
    <inlineHelpText>Count of jobs found in the agency dataset.</inlineHelpText>
    <label>Legacy Jobs Live - Agency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>