force-app/main/default/objects/Account/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <description>RO-2858 — Renamed from &quot;Agency Type&quot;. Partner category classification.</description>
    <label>Partner Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Win/Grow</fullName>
            </value>
            <value>
                <fullName>Retain</fullName>
            </value>
            <value>
                <fullName>Cut/Ignore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>