force-app/main/default/objects/Account/fields/AI_Account_Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Account_Sentiment_Score__c</fullName>
    <inlineHelpText>Numerischer Wert zwischen 0 (sehr negativ) und 4 (sehr positiv), der die Gesamtstimmung des Accounts widerspiegelt basierend auf der &quot;AI Account Sentiment Summary&quot;.
0: sehr negativ
1: leicht negativ
2: neutral
3: leicht positiv
4: sehr positiv</inlineHelpText>
    <label>AI Account Sentiment Score (Number)</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>