force-app/main/default/objects/Account/fields/AI_Account_Sentiment_Score_picklist__c.field-meta.xml
<CustomField>
    <fullName>AI_Account_Sentiment_Score_picklist__c</fullName>
    <inlineHelpText>Numerischer Wert zwischen 0 (sehr negativ) und 4 (sehr positiv), der die Gesamtstimmung des Accounts widerspiegelt basierend auf der &quot;AI Account Summary&quot;.</inlineHelpText>
    <label>AI Account Sentiment Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - sehr negativ</fullName>
            </value>
            <value>
                <fullName>1 - leicht negativ</fullName>
            </value>
            <value>
                <fullName>2 - neutral</fullName>
            </value>
            <value>
                <fullName>3 - leicht positiv</fullName>
            </value>
            <value>
                <fullName>4 - sehr positiv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>