force-app/main/default/objects/Account/fields/AI_Account_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Account_Summary__c</fullName>
    <description>RO-2514</description>
    <inlineHelpText>Automatisch generierte Zusammenfassung der Account-Stimmung basierend auf Account Dokumentation, Call-/Meeting-Notizen, Lost Opps und aktuellem NPS-Feedback. Diese KI-Analyse hilft dir, schnell den emotionalen Status und die Beziehungsqualität zum Account zu verstehen.</inlineHelpText>
    <label>AI Account Sentiment Summary</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>