force-app/main/default/objects/Account/fields/AI_Summary_Helper__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary_Helper__c</fullName>
    <description>Helper field for the AI summary. RO-2473</description>
    <label>AI Summary Helper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create Helper Records</fullName>
            </value>
            <value>
                <fullName>Generate Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>