force-app/main/default/objects/Account/fields/Amount_2_years_ago__c.field-meta.xml
<CustomField>
    <fullName>Amount_2_years_ago__c</fullName>
    <description>RO - 1613</description>
    <label>Legacy Amount 2 years ago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>