force-app/main/default/objects/Account/fields/Amount_of_packages_HJ_is_included__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_packages_HJ_is_included__c</fullName>
    <description>RO - 1631</description>
    <label>Legacy Amount of packages HJ is included</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>