force-app/main/default/objects/Account/fields/Annual_recruitment_volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_recruitment_volume__c</fullName>
    <description>RO-2315</description>
    <inlineHelpText>Wie viele offene Stellen plant das Unternehmen innerhalb dieses Jahres zu besetzen?</inlineHelpText>
    <label>Annual recruitment volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>