force-app/main/default/objects/Account/fields/Anzeigenumsatz_Sum__c.field-meta.xml
<CustomField>
    <fullName>Anzeigenumsatz_Sum__c</fullName>
    <description>RO - 2456</description>
    <inlineHelpText>Letzte Gesamtausgaben für Stellenanzeigen für alle offenen Stellen, die auf der Website von Index Anzeigendaten gemeldet wurden</inlineHelpText>
    <label>Legacy Anzeigenumsatz Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>