force-app/main/default/objects/Account/fields/Approval_process_recruitment_solution__c.field-meta.xml
<CustomField>
    <fullName>Approval_process_recruitment_solution__c</fullName>
    <description>RO-2315</description>
    <inlineHelpText>Wie sieht der Genehmigungsprozess für die Einführung eines neunen Tools im Unternehmen aus?
Beschreibt den Genehmigungsprozess, den potenzielle Kund*innen durchlaufen müssen, um ein neues Rekrutierungstool einzuführen.</inlineHelpText>
    <label>Approval process recruitment solution</label>
    <type>TextArea</type>
</CustomField>