force-app/main/default/objects/Account/fields/Arbeitsagentur_Jobs_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Arbeitsagentur_Jobs_Hierarchy__c</fullName>
    <inlineHelpText>Gesamtanzahl der von diesem Unternehmen und allen Unternehmen in seiner Hierarchie auf der Website &quot;arbeitsagentur&quot; veröffentlichten Stellen</inlineHelpText>
    <label>Arbeitsagentur Jobs (Hierarchy)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>