force-app/main/default/objects/Account/fields/Arbeitsagentur_Jobs_Self__c.field-meta.xml
<CustomField>
    <fullName>Arbeitsagentur_Jobs_Self__c</fullName>
    <inlineHelpText>Gesamtanzahl der von diesem Unternehmen auf der Website &quot;arbeitsagentur&quot; veröffentlichten Stellen</inlineHelpText>
    <label>Arbeitsagentur Jobs (Self)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>