force-app/main/default/objects/Account/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <description>This field is used to identifiy connected companies that are not in a hirarchy with each other.</description>
    <inlineHelpText>This field is used to identifiy connected companies that are not in a hirarchy with each other</inlineHelpText>
    <label>Association</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VDV - Verband Deutscher Verkehrsunternehmen e. V.</fullName>
            </value>
            <value>
                <fullName>VDV - Arbeitgeberinitiative</fullName>
            </value>
            <value>
                <fullName>Verband Deutscher Freizeitparks und Freizeitunternehmen e.V. (VDFU)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>