force-app/main/default/objects/Account/fields/ATRegister_Court__c.field-meta.xml
<CustomField>
    <fullName>ATRegister_Court__c</fullName>
    <description>Court of law where the company is registered in Austria</description>
    <inlineHelpText>Court of law where the company is registered in Austria</inlineHelpText>
    <label>ATRegister-Court</label>
    <length>50</length>
    <type>Text</type>
</CustomField>