force-app/main/default/objects/Account/fields/ATS_Int_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>ATS_Int_Go_Live__c</fullName>
    <inlineHelpText>Zeigt das Datum, an dem die Integration von IntOps abgeschlossen wurde.</inlineHelpText>
    <label>ATS Int. Go-Live</label>
    <type>DateTime</type>
</CustomField>