force-app/main/default/objects/Account/fields/ATS_Int_Type__c.field-meta.xml
<CustomField>
    <fullName>ATS_Int_Type__c</fullName>
    <inlineHelpText>Es gibt drei &quot;ATS&quot; Integrationsoptionen: &quot;Jobs&quot; für das Importieren von Jobs aus ihrem &quot;ATS&quot;, &quot;Bewerbungen&quot; für das Exportieren von Bewerbungen zu ihrem &quot;ATS&quot; und &quot;Voll&quot; für beides, was die häufigste und bevorzugte Einrichtung ist.</inlineHelpText>
    <label>ATS Int. Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applications</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Jobs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>