force-app/main/default/objects/Account/fields/ATS_Integrated__c.field-meta.xml
<CustomField>
    <fullName>ATS_Integrated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Zeigt an, ob der Kunde mit seinem ATS integriert ist.</inlineHelpText>
    <label>ATS Integrated</label>
    <type>Checkbox</type>
</CustomField>