force-app/main/default/objects/Account/fields/Avg_spend_month__c.field-meta.xml
<CustomField>
    <fullName>Avg_spend_month__c</fullName>
    <description>RO - 1692</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Avg spend / month in current con</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>