force-app/main/default/objects/Account/fields/Bankrupt__c.field-meta.xml
<CustomField>
    <fullName>Bankrupt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bankrupt</label>
    <type>Checkbox</type>
</CustomField>