force-app/main/default/objects/Account/fields/Base_AE__c.field-meta.xml
<CustomField>
    <fullName>Base_AE__c</fullName>
    <description>RO-2858 — LEGACY. Replaced by Partner_Kickback_1_AE__c. Do not use.</description>
    <formula>Framework_Opportunity_Group__r.Framework_Opportunity__r.Base_AE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The commission they receive for the base volume</inlineHelpText>
    <label>Legacy - Base AE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>