force-app/main/default/objects/Account/fields/Base_Runrate_of_current_contract__c.field-meta.xml
<CustomField>
    <fullName>Base_Runrate_of_current_contract__c</fullName>
    <description>RO - 1692</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Base Runrate of current contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>