force-app/main/default/objects/Account/fields/Base_stage_achievement__c.field-meta.xml
<CustomField>
    <fullName>Base_stage_achievement__c</fullName>
    <description>RO - 1631</description>
    <formula>Framework_Opportunity_Group__r.Base_Goal_achievement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base stage achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>