force-app/main/default/objects/Account/fields/Base_Volume__c.field-meta.xml
<CustomField>
    <fullName>Base_Volume__c</fullName>
    <description>RO-2858 — LEGACY. Replaced by Partner_Kickback_Threshold_1__c. Do not use.</description>
    <formula>Framework_Opportunity_Group__r.Framework_Opportunity__r.Base_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The volume we define in order to work together. If this is 0€ then we have no fixed commitment and if it has a value then it is the minimum commitment.</inlineHelpText>
    <label>Legacy - Base Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>