force-app/main/default/objects/Account/fields/Bill_is_Ship__c.field-meta.xml
<CustomField>
    <fullName>Bill_is_Ship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill is Ship</label>
    <type>Checkbox</type>
</CustomField>