force-app/main/default/objects/Account/fields/Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information__c</fullName>
    <description>Job Optimizations Section</description>
    <label>Billing Information</label>
    <type>TextArea</type>
</CustomField>