force-app/main/default/objects/Account/fields/Blacklist__c.field-meta.xml
<CustomField>
    <fullName>Blacklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-236</description>
    <inlineHelpText>Ein Account sollte auf die Blacklist gesetzt werden, wenn der Kunde dies wünscht (z.B. „Kontaktieren Sie uns nie wieder“). Im Gegensatz dazu, wenn der Kunde sich nur auf sich selbst bezieht („Kontaktieren Sie mich nie wieder“), sollte der jeweilige Kontakt und nicht der Account auf die Blacklist gesetzt werden.</inlineHelpText>
    <label>Blacklist</label>
    <type>Checkbox</type>
</CustomField>