force-app/main/default/objects/Account/fields/Booking_expected_in_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Booking_expected_in_Quarter__c</fullName>
    <description>RO-2433</description>
    <inlineHelpText>Quartal, in dem die Kund*in das (nächste) Booking tätigen möchte oder du das nächste Booking erwartest. (Das Feld dient dazu deine Vertriebsaktivitäten entsprechend zu planen und zu priorisieren.)</inlineHelpText>
    <label>Booking expected in Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>