force-app/main/default/objects/Account/fields/BookingCoverage__c.field-meta.xml
<CustomField>
    <fullName>BookingCoverage__c</fullName>
    <description>Remaining credit divided by average credit used per month in last 3 months</description>
    <inlineHelpText>Remaining credit divided by average credit used per month in last 3 months</inlineHelpText>
    <label>Legacy BookingCoverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>