force-app/main/default/objects/Account/fields/Bookings_in_current_contract__c.field-meta.xml
<CustomField>
    <fullName>Bookings_in_current_contract__c</fullName>
    <description>RO-2858 — LEGACY. Replaced by Partner_Booking_Within_Contract__c. Do not use.</description>
    <formula>Framework_Opportunity_Group__r.Bookings_in_Current_contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Bookings in Current Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>