force-app/main/default/objects/Account/fields/Bookings_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Bookings_last_12_months__c</fullName>
    <defaultValue>0</defaultValue>
    <description>RO-674 / Used in Declarative Rollup Summary</description>
    <inlineHelpText>Zeigt die Summer aller (closed won) Bookings in den letzten 12 Monaten.</inlineHelpText>
    <label>Bookings Last 12 Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>