force-app/main/default/objects/Account/fields/Bookings_Last_12_Months_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Last_12_Months_Hierarchy__c</fullName>
    <label>Bookings Last 12 Months (Hierarchy)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>